Chore: the Yeti came and restored order.

--- a/MQTTPlugin/MQTTPlugin.csproj
+++ b/MQTTPlugin/MQTTPlugin.csproj
@@ -75,6 +75,12 @@
     <Reference Include="Dialogs">
       <HintPath>..\External\Dialogs.dll</HintPath>
     </Reference>
+    <Reference Include="FanartHandler">
+      <HintPath>..\External\FanartHandler.dll</HintPath>
+    </Reference>
+    <Reference Include="GUIVideos">
+      <HintPath>..\External\GUIVideos.dll</HintPath>
+    </Reference>
     <Reference Include="LatestMediaHandler, Version=2.4.0.79, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\LatestMediaHandler.dll</HintPath>
@@ -110,9 +116,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DPAPI.cs" />
+    <Compile Include="FanartHandlerHelper.cs" />
     <Compile Include="LatestsMediaHandlerHelper.cs" />
     <Compile Include="Messages.cs" />
+    <Compile Include="MyMusicHelper.cs" />
     <Compile Include="MyVideoHelper.cs" />
+    <Compile Include="Play.cs" />
     <Compile Include="Queue.cs" />
     <Compile Include="SkinInfo.cs" />
     <Compile Include="Utils.cs" />
@@ -176,4 +185,9 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+        None
+    </ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+  </PropertyGroup>
 </Project>
