--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Nuget
+        run: |
+          nuget restore
+        shell: cmd
+
       - name: Build
         run: |
           build_git.bat < nul
@@ -69,8 +74,6 @@ jobs:
     runs-on: windows-2019
     needs:
       - build
-    outputs:
-      version: ${{ steps.version.outputs.version }}
     steps:
       - name: Restore cache
         uses: actions/cache/restore@v4
