--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,7 +121,7 @@ jobs:
 
   cache-clear:
     name: Clear cache
-    runs-on: ubuntu-latests
+    runs-on: ubuntu-latest
     needs:
       - mpe
     steps:
