--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,12 +64,27 @@ jobs:
           path: ${{ github.workspace }}
           key: plugin
 
+  changes:
+    name: XMP2 / Changed
+    runs-on: ubuntu-latest
+    outputs:
+      changes: ${{ steps.changes.outputs.xmp }}
+    steps:
+    - uses: actions/checkout@v4
+    - uses: dorny/paths-filter@v3
+      id: changes
+      with:
+        filters: |
+          xmp:
+            - '**.xmp2'
+
   codeql:
     name: CodeQL
-    if: "contains(github.event.head_commit.message, '[release]')"
+    if: ${{ needs.changes.outputs.changes == 'true' }}
     uses: andrewjswan/MPE/.github/workflows/codeql.yml@master
     needs: 
       - build
+      - changes
     permissions:
       security-events: write
     secrets: inherit
@@ -79,8 +94,10 @@ jobs:
     runs-on: windows-2019
     needs:
       - build
+      - changes
     outputs:
       version: ${{ steps.version.outputs.version }}
+      changes: ${{ needs.changes.outputs.changes }}
     steps:
       - name: Restore cache
         uses: actions/cache/restore@v4
@@ -135,7 +152,7 @@ jobs:
 
       - name: Upload Artifact / MPE XML
         uses: actions/upload-artifact@v4
-        if: ${{ success() && contains(github.event.head_commit.message, '[release]') }}
+        if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         with:
           name: MQTTPlugin XML
           path: |
@@ -144,28 +161,28 @@ jobs:
           if-no-files-found: error
 
       - name: Get Release Version Description
-        if: ${{ success() && contains(github.event.head_commit.message, '[release]') }}
+        if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         run: |
           call ..\MPE\XPath\xpath.cmd "MQTTPlugin.xml" "//Items/PackageClass/GeneralInfo/VersionDescription" last > description.txt
         working-directory: ${{ github.workspace }}\scripts
         shell: cmd
 
       - name: Clean Release Version Description
-        if: ${{ success() && contains(github.event.head_commit.message, '[release]') }}
+        if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         run: |
           sed.exe -i "s/\*\*\* We Stand with Ukraine \*\*\*//g" description.txt
         working-directory: ${{ github.workspace }}\setup
         shell: cmd
 
       - name: Add Badges to Release Version Description
-        if: ${{ success() && contains(github.event.head_commit.message, '[release]') }}
+        if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         run: |
           ECHO [![Downloads](https://img.shields.io/github/downloads/andrewjswan/MQTTPlugin/v${{steps.version.outputs.version}}/total)](https://github.com/andrewjswan/MQTTPlugin/releases/tag/v${{steps.version.outputs.version}}) [![StandWithUkraine](https://raw.githubusercontent.com/vshymanskyy/StandWithUkraine/main/badges/StandWithUkraine.svg)](https://github.com/vshymanskyy/StandWithUkraine/blob/main/docs/README.md) >> description.txt
         working-directory: ${{ github.workspace }}\setup
         shell: cmd
 
       - name: Clean Release Version Description
-        if: ${{ success() && contains(github.event.head_commit.message, '[release]') }}
+        if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         run: |
           sed.exe -i "s/ \//\//g" description.txt
         working-directory: ${{ github.workspace }}\setup
@@ -173,7 +190,7 @@ jobs:
 
       - name: Upload Artifact / Version Description
         uses: actions/upload-artifact@v4
-        if: ${{ success() && contains(github.event.head_commit.message, '[release]') }}
+        if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         with:
           name: MQTTPlugin Version Description
           path: |
@@ -184,11 +201,13 @@ jobs:
   xml:
     name: MQTT Plugin / XML
     runs-on: ubuntu-latest
-    if: "contains(github.event.head_commit.message, '[release]')"
+    if: ${{ needs.mpe.outputs.changes == 'true' }}
     needs:
       - mpe
     permissions:
       contents: write
+    outputs:
+      changes: ${{ needs.mpe.outputs.changes }}
     steps:
       - name: Git Checkout
         uses: actions/checkout@v4
@@ -215,12 +234,14 @@ jobs:
 
   release:
     name: MQTT Plugin / Release
-    if: "contains(github.event.head_commit.message, '[release]')"
+    if: ${{ needs.mpe.outputs.changes == 'true' }}
     needs:
       - mpe
       - xml
     permissions:
       contents: write
+    outputs:
+      changes: ${{ needs.mpe.outputs.changes }}
     
     runs-on: ubuntu-latest
     
@@ -281,7 +302,7 @@ jobs:
 
   release-status:
     name: Release Status
-    if: "contains(github.event.head_commit.message, '[release]')"
+    if: ${{ needs.mpe.outputs.changes == 'true' }}
     runs-on: ubuntu-latest
     needs:
       - release
