--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -171,21 +171,21 @@ jobs:
         if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         run: |
           sed.exe -i "s/\*\*\* We Stand with Ukraine \*\*\*//g" description.txt
-        working-directory: ${{ github.workspace }}\setup
+        working-directory: ${{ github.workspace }}\scripts
         shell: cmd
 
       - name: Add Badges to Release Version Description
         if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         run: |
           ECHO [![Downloads](https://img.shields.io/github/downloads/andrewjswan/MQTTPlugin/v${{steps.version.outputs.version}}/total)](https://github.com/andrewjswan/MQTTPlugin/releases/tag/v${{steps.version.outputs.version}}) [![StandWithUkraine](https://raw.githubusercontent.com/vshymanskyy/StandWithUkraine/main/badges/StandWithUkraine.svg)](https://github.com/vshymanskyy/StandWithUkraine/blob/main/docs/README.md) >> description.txt
-        working-directory: ${{ github.workspace }}\setup
+        working-directory: ${{ github.workspace }}\scripts
         shell: cmd
 
       - name: Clean Release Version Description
         if: ${{ success() && needs.changes.outputs.changes == 'true' }}
         run: |
           sed.exe -i "s/ \//\//g" description.txt
-        working-directory: ${{ github.workspace }}\setup
+        working-directory: ${{ github.workspace }}\scripts
         shell: cmd
 
       - name: Upload Artifact / Version Description
